--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,6 +5,7 @@ disabled_rules:
   - conditional_returns_on_newline
   - sorted_imports
   - unneeded_parentheses_in_closure_argument
+  - empty_count
 opt_in_rules:
   - attributes
   - closure_end_indentation
