--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -6,6 +6,7 @@ disabled_rules:
   - sorted_imports
   - unneeded_parentheses_in_closure_argument
   - empty_count
+  - attributes
 opt_in_rules:
   - attributes
   - closure_end_indentation
